[package]
name = "conllx"
version = "0.9.2"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Readers/writers for the CoNLL-X dependency format"
documentation = "https://docs.rs/conllx/"
homepage = "https://github.com/danieldk/conllx-rs"
repository = "https://github.com/danieldk/conllx-rs"
license = "Apache-2.0"
readme = "README.md"
exclude = [
  ".gitignore"
]

[dependencies]
error-chain = "0.11"
itertools = "0.6"
lazy-init = "0.1"
petgraph = "0.4"

[dev-dependencies]
lazy_static = "0.2"
maplit = "0.1"
pretty_assertions = "0.3.4"
quickcheck = "0.4"
