[package]
name = "conllx"
version = "0.10.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
description = "Readers/writers for the CoNLL-X dependency format"
documentation = "https://docs.rs/conllx/"
homepage = "https://github.com/danieldk/conllx-rs"
repository = "https://github.com/danieldk/conllx-rs"
license = "Apache-2.0"
readme = "README.md"
exclude = [
  ".gitignore"
]

[dependencies]
failure = "0.1"
itertools = "0.7"
lazy-init = "0.3"
petgraph = "0.4"

[dev-dependencies]
lazy_static = "1.0"
maplit = "1.0"
pretty_assertions = "0.4"
quickcheck = "0.6"
